--- a/src/app/layout/company/company.component.html
+++ b/src/app/layout/company/company.component.html
@@ -1,3 +1,6 @@
-<p>
-  company works!
-</p>
+<div>
+  <!-- <app-page-header [heading]="'Company Hierarchy'" [icon]="'fa fa-university'"></app-page-header> -->
+  <h2 class="text-muted">Company Hierarchy</h2>
+  <app-company-tree></app-company-tree>
+
+</div>
