--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,20 +2,20 @@
     <div class="row justify-content-md-center">
         <div class="col-md-4">
             <img src="assets/images/logo.png" width="150px" class="user-avatar" />
-            <h1>SB Admin BS4 Angular5</h1>
+            <h1>ERP System Admin</h1>
             <form role="form">
                 <div class="form-content">
                     <div class="form-group">
-                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
+                        <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="User Name">
                     </div>
 
                     <div class="form-group">
                         <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
                     </div>
                 </div>
-                <a class="btn rounded-btn" [routerLink]="['/dashboard']" (click)="onLoggedin()"> Log in </a>
+                <a class="btn rounded-btn" [routerLink]="['/company']" (click)="onLoggedin()"> Log in </a>
                 &nbsp;
-                <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a>
+                <!-- <a class="btn rounded-btn" [routerLink]="['/signup']">Register</a> -->
             </form>
         </div>
     </div>
