--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,8 @@
 <div class="login-page" [@routerTransition]>
     <div class="row justify-content-md-center">
         <div class="col-md-4">
-            <img src="assets/images/logo.png" width="150px" class="user-avatar" />
+            <!-- <img src="assets/images/logo.jpg" width="150px" class="user-avatar" /> -->
+            <img src="assets/images/logo.jpg"  />
             <h1>ERP System Admin</h1>
             <form role="form">
                 <div class="form-content">
