Update on 3rd May 2018

--- a/src/app/layout/company/company-add/company-add.component.html
+++ b/src/app/layout/company/company-add/company-add.component.html
@@ -13,107 +13,111 @@
     <div>
         <div class="row">
           <div class="col-md-12">
-            
               <form role="form">
-                  <div class="row">
-                  <div class="form-group col-md-6">
-                      <label>Mother Company</label>
-                      <select class="form-control">
-                          <option>Mother company</option>
-                          <option>Child Company 1</option>
-                          <option>Child Company 2</option>
-                          <option>Sub Child Company 1</option>
-                          <option>Sub Child Company 2</option>
-                          <option>Sub Child Company 3</option>
-                          <option>Sub Child Company 4</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-md-6">
-                      <label>Company Name</label>
-                      <input class="form-control" placeholder="Name">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>Website</label>
-                      <input class="form-control" placeholder="Website">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>Email</label>
-                      <input class="form-control" placeholder="Email">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>Phone</label>
-                      <input class="form-control" placeholder="Phone">
-                  </div>
-                  <div class="form-group col-md-12">
-                      <label>Company Address</label>
-                      <textarea class="form-control" rows="3" placeholder="Company Address"></textarea>
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>State</label>
-                      <select class="form-control">
-                          <option value="0">Select State</option>
-                          <option value="71">ANDHRA PRADESH</option>
-                          <option value="72">ASSAM</option>
-                          <option value="73">ARUNACHAL PRADESH</option>
-                          <option value="74">GUJRAT</option>
-                          <option value="75">BIHAR</option>
-                          <option value="76">HARYANA</option>
-                          <option value="77">HIMACHAL PRADESH</option>
-                          <option value="78">JAMMU &amp; KASHMIR</option>
-                          <option value="79">KARNATAKA</option>
-                          <option value="80">KERALA</option>
-                          <option value="81">MADHYA PRADESH</option>
-                          <option value="82">MAHARASHTRA</option>
-                          <option value="83">MANIPUR</option>
-                          <option value="84">MEGHALAYA</option>
-                          <option value="85">MIZORAM</option>
-                          <option value="86">NAGALAND</option>
-                          <option value="87">ORISSA</option>
-                          <option value="88">PUNJAB</option>
-                          <option value="89">RAJASTHAN</option>
-                          <option value="90">SIKKIM</option>
-                          <option value="91">TAMIL NADU</option>
-                          <option value="92">TRIPURA</option>
-                          <option value="93">UTTAR PRADESH</option>
-                          <option value="94">WEST BENGAL</option>
-                          <option value="95">DELHI</option>
-                          <option value="96">GOA</option>
-                          <option value="97">PONDICHERY</option>
-                          <option value="98">LAKSHDWEEP</option>
-                          <option value="99">DAMAN &amp; DIU</option>
-                          <option value="100">DADRA &amp; NAGAR</option>
-                          <option value="101">CHANDIGARH</option>
-                          <option value="102">ANDAMAN &amp; NICOBAR</option>
-                          <option value="103">UTTARANCHAL</option>
-                          <option value="104">JHARKHAND</option>
-                          <option value="105">CHATTISGARH</option>
-                          <option value="106">Telegana-2</option>
-                      </select>
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>City</label>
-                      <input class="form-control" placeholder="City Name">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>Pin</label>
-                      <input class="form-control" placeholder="Pin">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>GSTIN</label>
-                      <input class="form-control" placeholder="GSTIN">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>PAN</label>
-                      <input class="form-control" placeholder="PAN">
-                  </div>
-                  <div class="form-group col-md-4">
-                      <label>CIN</label>
-                      <input class="form-control" placeholder="CIN">
-                  </div>
-                  <div class="form-group col-md-12" style="text-align: right">
-                  <button type="submit" class="btn btn-success">Submit</button>
-                  <button type="reset" class="btn btn-secondary">Reset</button>
-                  </div>
+                <div class="card bg-light mb-3">
+                    <div class="card-header" style="background-color:#868e96; color: #fff;">Company Add</div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label>Mother Company</label>
+                                <select class="form-control">
+                                    <option>Mother company</option>
+                                    <option>Child Company 1</option>
+                                    <option>Child Company 2</option>
+                                    <option>Sub Child Company 1</option>
+                                    <option>Sub Child Company 2</option>
+                                    <option>Sub Child Company 3</option>
+                                    <option>Sub Child Company 4</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Company Name</label>
+                                <input class="form-control" placeholder="Name">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Website</label>
+                                <input class="form-control" placeholder="Website">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Email</label>
+                                <input class="form-control" placeholder="Email">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Phone</label>
+                                <input class="form-control" placeholder="Phone">
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label>Company Address</label>
+                                <textarea class="form-control" rows="3" placeholder="Company Address"></textarea>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>State</label>
+                                <select class="form-control">
+                                    <option value="0">Select State</option>
+                                    <option value="71">ANDHRA PRADESH</option>
+                                    <option value="72">ASSAM</option>
+                                    <option value="73">ARUNACHAL PRADESH</option>
+                                    <option value="74">GUJRAT</option>
+                                    <option value="75">BIHAR</option>
+                                    <option value="76">HARYANA</option>
+                                    <option value="77">HIMACHAL PRADESH</option>
+                                    <option value="78">JAMMU &amp; KASHMIR</option>
+                                    <option value="79">KARNATAKA</option>
+                                    <option value="80">KERALA</option>
+                                    <option value="81">MADHYA PRADESH</option>
+                                    <option value="82">MAHARASHTRA</option>
+                                    <option value="83">MANIPUR</option>
+                                    <option value="84">MEGHALAYA</option>
+                                    <option value="85">MIZORAM</option>
+                                    <option value="86">NAGALAND</option>
+                                    <option value="87">ORISSA</option>
+                                    <option value="88">PUNJAB</option>
+                                    <option value="89">RAJASTHAN</option>
+                                    <option value="90">SIKKIM</option>
+                                    <option value="91">TAMIL NADU</option>
+                                    <option value="92">TRIPURA</option>
+                                    <option value="93">UTTAR PRADESH</option>
+                                    <option value="94">WEST BENGAL</option>
+                                    <option value="95">DELHI</option>
+                                    <option value="96">GOA</option>
+                                    <option value="97">PONDICHERY</option>
+                                    <option value="98">LAKSHDWEEP</option>
+                                    <option value="99">DAMAN &amp; DIU</option>
+                                    <option value="100">DADRA &amp; NAGAR</option>
+                                    <option value="101">CHANDIGARH</option>
+                                    <option value="102">ANDAMAN &amp; NICOBAR</option>
+                                    <option value="103">UTTARANCHAL</option>
+                                    <option value="104">JHARKHAND</option>
+                                    <option value="105">CHATTISGARH</option>
+                                    <option value="106">Telegana-2</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>City</label>
+                                <input class="form-control" placeholder="City Name">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Pin</label>
+                                <input class="form-control" placeholder="Pin">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>GSTIN</label>
+                                <input class="form-control" placeholder="GSTIN">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>PAN</label>
+                                <input class="form-control" placeholder="PAN">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>CIN</label>
+                                <input class="form-control" placeholder="CIN">
+                            </div>
+                            <div class="form-group col-md-12" style="text-align: right">
+                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="reset" class="btn btn-secondary">Reset</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
               </form>
           </div>
