--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -4,7 +4,8 @@ $topnav-background-color: #222;
     position: fixed;
     z-index: 1000;
     top: 50px;
-    left: 200px;
+    //left: 200px;
+    left: 0px;
     width: 200px;
     margin-left: -200px;
     border: none;
