--- a/src/app/layout/sale-organization/sale-organization-add/sale-organization-add.component.html
+++ b/src/app/layout/sale-organization/sale-organization-add/sale-organization-add.component.html
@@ -13,18 +13,23 @@
       <div class="row">
         <div class="col-md-12">
             <form role="form">
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        <label>Sale Organization Name</label>
-                        <input class="form-control" placeholder="Pruchase Organization Name">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>Organization Description</label>
-                        <textarea class="form-control" rows="1" placeholder="Organization Description"></textarea>
-                    </div>
-                    <div class="form-group col-md-12" style="text-align: right">
-                      <button type="submit" class="btn btn-success">Submit</button>
-                      <button type="reset" class="btn btn-secondary">Reset</button>
+                <div class="card bg-light mb-3">
+                    <div class="card-header" style="background-color:#868e96; color: #fff;">Sale Organization Add</div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label>Sale Organization Name</label>
+                                <input class="form-control" placeholder="Pruchase Organization Name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Organization Description</label>
+                                <textarea class="form-control" rows="1" placeholder="Organization Description"></textarea>
+                            </div>
+                            <div class="form-group col-md-12" style="text-align: right">
+                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="reset" class="btn btn-secondary">Reset</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
