--- a/src/app/layout/sale-group/sale-group-add/sale-group-add.component.html
+++ b/src/app/layout/sale-group/sale-group-add/sale-group-add.component.html
@@ -4,7 +4,7 @@
     <div class="col-md-6 offset-md-6 pull-right" style="text-align: right">
         <button type="button" class="btn btn-secondary"><i class="fa fa-question" aria-hidden="true"></i> Help</button>
         <button type="button" class="btn btn-secondary"><i class="fa fa-refresh"></i> Reload</button>
-        <button type="button" class="btn btn-success" (click)="btnClickNav('purchase-group')"><i class="fa fa-arrow-left"></i> Back</button>
+        <button type="button" class="btn btn-success" (click)="btnClickNav('sale-group')"><i class="fa fa-arrow-left"></i> Back</button>
     </div>
     <div class="clearfix"></div>
   </div>
@@ -13,18 +13,23 @@
       <div class="row">
         <div class="col-md-12">
             <form role="form">
-                <div class="row">
-                    <div class="form-group col-md-6">
-                        <label>Sale Group Name</label>
-                        <input class="form-control" placeholder="Sale Group Name">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label>Group Description</label>
-                        <textarea class="form-control" rows="1" placeholder="Group Description"></textarea>
-                    </div>
-                    <div class="form-group col-md-12" style="text-align: right">
-                      <button type="submit" class="btn btn-success">Submit</button>
-                      <button type="reset" class="btn btn-secondary">Reset</button>
+                <div class="card bg-light mb-3">
+                    <div class="card-header" style="background-color:#868e96; color: #fff;">Sale Group Add</div>
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label>Sale Group Name</label>
+                                <input class="form-control" placeholder="Sale Group Name">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Group Description</label>
+                                <textarea class="form-control" rows="1" placeholder="Group Description"></textarea>
+                            </div>
+                            <div class="form-group col-md-12" style="text-align: right">
+                            <button type="submit" class="btn btn-success">Submit</button>
+                            <button type="reset" class="btn btn-secondary">Reset</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </form>
