update on 4th May 2018

--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -93,25 +93,25 @@
                     <i class="fa fa-cog"></i> Setting<b class="caret"></b>
                 </a>
                 <div class="dropdown-menu-right" ngbDropdownMenu>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/states']">
                         <i class="fa fa-map-marker" aria-hidden="true"></i> States
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/gst-rates']">
                         <i class="fa fa-line-chart" aria-hidden="true"></i> GST Rates
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
                         <i class="fa fa-user-circle-o" aria-hidden="true"></i> Vendors
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/terms-condition']">
                         <i class="fa fa-info-circle" aria-hidden="true"></i> Terms & Conditions
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/transport']">
                         <i class="fa fa-truck" aria-hidden="true"></i> Transporters
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/banks']">
                         <i class="fa fa-university" aria-hidden="true"></i> Banks
                     </a>
-                    <a class="dropdown-item" href="javascript:void(0)">
+                    <a class="dropdown-item" href="javascript:void(0)" [routerLink]="['/department']">
                         <i class="fa fa-sitemap" aria-hidden="true"></i> Department
                     </a>
                     <a class="dropdown-item" href="javascript:void(0)">
